# one-ring-mesh-processing

./: .gitignore  CMakeLists.txt  README.md  README.txt  run-no-mesh.cmd  run-vtkm.cmd  run.cmd  sort_meshes.cmd  strip-attributes.cmd
include/: HalfEdgeMesh.hpp  SimpleMesh.hpp  Vector2.hpp  Vector3.hpp  cpu_mesh_operations.hpp  cuda_mesh_operations.hpp  cuda_util.cuh  fast_mesh_operations.h  mesh_centroid_generator.hpp  mesh_normal_generator.hpp  onering_base.hpp  perf.hpp  processing_functor.hpp  timing_struct.hpp  util.hpp
src/: HalfEdgeMesh.cpp  SimpleMesh.cpp  cpu_mesh_operations.cpp  cuda_mesh_operations.cu  deprecated-kernels.cu  fast_mesh_operations.cu  main.cpp  mesh_centroid_generator.cpp  mesh_normal_generator.cpp  processing_functor.cpp  util.cpp
src-vtkm/: vtkm_test.cpp
src/onering/: main.cpp
src/onering-vtkm/: mesh_normal_generator_vtkm.cpp  mesh_normal_generator_vtkm.hpp  vtkm_test.cpp
src/shared/: HalfEdgeMesh.cpp  SimpleMesh.cpp  cpu_mesh_operations.cpp  cuda_mesh_operations.cu  deprecated-kernels.cu  mesh_centroid_generator.cpp  mesh_normal_generator.cpp  util.cpp
